Updated content and added necessary pages.

--- a/recipes/adobo.html
+++ b/recipes/adobo.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Adobo</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
     <h1 style="text-align: center">Adobo recipe</h1>
+    <a href="../index.html">Go back to main page</a>
+    <br />
     <img
       src="../images/adobo.jpg"
       alt="Picture of filipino adobo"
-      width="400px"
+      width="500px"
       height="400px"
     />
 
@@ -22,8 +25,34 @@
       <li>Vinegar</li>
       <li>Whole black pepper</li>
       <li>1/2 tablespoon of sugar</li>
-      <li></li>
+      <li>1 kilo of chicken breast</li>
+      <li>1 <i>Knorr</i> chicken cube</li>
+      <li>1 packet of laurel leaves</li>
+      <li>3 pieces of red peppers</li>
+      <li>3 pieces of cut calamansi</li>
+      <li>3 cloves of garlic, chopped</li>
     </ul>
-    <p></p>
+
+    <h3>Steps</h3>
+    <ol>
+      <li>
+        Prepare the marinade. If the chicken is too large, cut it into smaller
+        pieces. Soak the meat into a mixture of soy sauce, vinegar, calamansi
+        that has been squished, red peppers, and whole peppercorns. Soak it for
+        atmost 1 hour.
+      </li>
+      <br />
+      <li>
+        After one hour, prepare the stove and the pan. Fry the garlic until
+        brown and then fry the meat. Leave the marinade to the side.
+      </li>
+      <br />
+      <li>
+        If the chicken is brown, pour the marinade in. Add the laurel leaves and
+        Knorr cubes.
+      </li>
+      <br />
+      <li>Leave the pan to boil.</li>
+    </ol>
   </body>
 </html>
