--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/adobo.html">Adobo</a>
+    <ul>
+      <li>
+        <a href="recipes/adobo.html">Adobo</a>
+      </li>
+      <li>
+        <a href="recipes/omelette.html">Omelette</a>
+      </li>
+      <li>
+        <a href="recipes/coffee.html">Coffee</a>
+      </li>
+    </ul>
   </body>
 </html>
