--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -4,45 +4,85 @@
     <title>Adobo</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Omelette</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1 style="text-align: center">Omelette recipe</h1>
-    <a href="../index.html">Go back to main page</a>
-    <br />
-    <img
-      src="../images/omelette.jpg"
-      alt="Picture of omelette"
-      width="500px"
-      height="400px"
-    />
+    <div class="heading">
+      <h1>Odin Recipes</h1>
+    </div>
 
-    <br />
-    <h1>Description</h1>
-    <h3>Ingredients</h3>
-    <ul>
-      <li>3 pieces of egg whole</li>
-      <li>2 tomatoes, minced</li>
-      <li>1 tbsp salt</li>
-      <li>Ground pepper</li>
-      <li>Paprika</li>
-    </ul>
+    <div class="container-information">
+      <div class="container-dish-title">
+        <p>Omelette</p>
+      </div>
 
-    <h3>Steps</h3>
-    <ol>
-      <li>Beat three eggs in a bowl and mixed until well stirred.</li>
-      <br />
-      <li>
-        In a pan, sautee tomatoes in hot oil until soft. After that, pour in the
-        beaten eggs.
-      </li>
-      <br />
-      <li>Season using pepper, salt and paprika. Wait for 5 minutes.</li>
-      <br />
-      <li>
-        Flip the egg to its other side and wait for 3 minutes. Take it out of
-        the pan and serve it hot. Garnish if necessary.
-      </li>
-    </ol>
+      <img src="../images/omelette.jpg" alt="adobo dish" />
+
+      <div class="description-label">
+        <h1>Description</h1>
+      </div>
+
+      <div class="container-information-long">
+        <h3>Ingredients</h3>
+
+        <div id="container-checklist">
+          <input type="checkbox" name="checkbox-1" id="checkboxes" value="1" />
+          <label for="checkboxes" class="strikethrough"
+            >&nbsp &nbsp &nbsp 3 pieces of egg, whole</label
+          ><br />
+          <input type="checkbox" name="checkbox-2" id="checkboxes" value="1" />
+          <label for="checkboxes" class="strikethrough"
+            >&nbsp &nbsp &nbsp 2 tomatoes, minced</label
+          ><br />
+          <input type="checkbox" name="checkbox-3" id="checkboxes" value="1" />
+          <label for="checkboxes" class="strikethrough"
+            >&nbsp &nbsp &nbsp 1 tablespoon of salt</label
+          ><br />
+          <input type="checkbox" name="checkbox-4" id="checkboxes" value="1" />
+          <label for="checkboxes" class="strikethrough"
+            >&nbsp &nbsp &nbsp Ground pepper</label
+          ><br />
+          <input type="checkbox" name="checkbox-5" id="checkboxes" value="1" />
+          <label for="checkboxes" class="strikethrough"
+            >&nbsp &nbsp &nbsp Paprika</label
+          ><br />
+        </div>
+      </div>
+
+      <div class="container-bottom-column">
+        <h3>Steps</h3>
+        <ol>
+          <li>
+            <p>Beat three eggs in a bowl and mixed until well stirred.</p>
+          </li>
+
+          <li>
+            <p>
+              In a pan, sautee tomatoes in hot oil until soft. After that, pour
+              in the beaten eggs.
+            </p>
+          </li>
+
+          <li>
+            <p>Season using pepper, salt and paprika. Wait for 5 minutes.</p>
+          </li>
+
+          <li>
+            <p>
+              Flip the egg to its other side and wait for 3 minutes. Take it out
+              of the pan and serve it hot. Garnish if necessary.
+            </p>
+          </li>
+        </ol>
+      </div>
+
+      <button
+        type="button"
+        class="button"
+        onclick="location.href='../index.html'"
+      >
+        Go back to main page.
+      </button>
+    </div>
   </body>
 </html>
